apps/bugsink/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bugsink
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bugsink
  template:
    metadata:
      labels:
        app: bugsink
    spec:
      containers:
      - name: bugsink
        image: bugsink/bugsink:1.3
        ports:
        - containerPort: 8000
