apps/bugsink/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: bugsink-ingress
  annotations:
    gethomepage.dev/href: "https://bugs.trusted.nirmalhk7.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Devbench
    gethomepage.dev/description: "Bugs"
    gethomepage.dev/icon: "https://www.bugsink.com/static/images/bugsink-logo.7a9597e724ff.webp"
    gethomepage.dev/app: bugsink # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: bugsink
    gethomepage.dev/pod-selector: "app=bugsink"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: "Host(`bugs.trusted.nirmalhk7.com`)"
      kind: Rule
      services:
        - name: bugsink
          port: 8000
      middlewares:
        - name: mgd-devbench-https
        - name: mgd-devbench-headervalidation
  tls:
    secretName: bugsink-tls
